--- a/GiftBird/GiftBird.csproj
+++ b/GiftBird/GiftBird.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NonProfitsController.cs" />
+    <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -331,6 +332,7 @@
     <Content Include="Views\NonProfits\Details.cshtml" />
     <Content Include="Views\NonProfits\Edit.cshtml" />
     <Content Include="Views\NonProfits\Index.cshtml" />
+    <Content Include="Views\Search\Data.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
