--- a/GiftBird/GiftBird.csproj
+++ b/GiftBird/GiftBird.csproj
@@ -335,6 +335,8 @@
     <Content Include="Views\NonProfits\NanProfile.cshtml" />
     <Content Include="Views\Donators\DonProfile.cshtml" />
     <Content Include="Views\Donators\SearchView.cshtml" />
+    <Content Include="Views\Donators\DonProfileWithList.cshtml" />
+    <Content Include="Views\Donators\LoginUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
