--- a/GiftBird/GiftBird.csproj
+++ b/GiftBird/GiftBird.csproj
@@ -236,6 +236,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\giftbird.PNG" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -337,6 +338,7 @@
     <Content Include="Views\Donators\SearchView.cshtml" />
     <Content Include="Views\Donators\DonProfileWithList.cshtml" />
     <Content Include="Views\Donators\LoginUser.cshtml" />
+    <Content Include="Views\Donators\DetailsPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
