--- a/GiftBird/GiftBird.csproj
+++ b/GiftBird/GiftBird.csproj
@@ -342,6 +342,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Image\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
