--- a/GiftBird/GiftBird.csproj
+++ b/GiftBird/GiftBird.csproj
@@ -233,9 +233,11 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Original bootstrap.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\Original bootstrap.min - Copy.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\giftbird.PNG" />
     <Content Include="favicon.ico" />
@@ -260,6 +262,7 @@
     <Content Include="Models\GiftBird.edmx.diagram">
       <DependentUpon>GiftBird.edmx</DependentUpon>
     </Content>
+    <Content Include="Content\Original bootstrap.css.map" />
     <None Include="Properties\PublishProfiles\GiftBird - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Models\GiftBird.Context.tt">
